--- a/AccounterApplication.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,10 +1,11 @@
 ﻿@page
+
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Identity.IdentityResources;
+
 @model RegisterModel
 
-@inject IViewLocalizer Localizer
-
 @{
-    ViewData["Title"] = Localizer["Register"];
+    ViewData["Title"] = Resources.Register;
 }
 
 <h1>@ViewData["Title"]</h1>
@@ -12,7 +13,7 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h4>@Localizer["Create a new account."]</h4>
+            <h4>@Resources.CreateAccount</h4>
             <hr />
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -30,7 +31,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">@Localizer["Register"]</button>
+            <button type="submit" class="btn btn-primary">@ButtonsResources.Register</button>
         </form>
     </div>
 </div>
