--- a/AccounterApplication.Web/Views/Shared/_CookieConsentPartial.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_CookieConsentPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http.Features
-
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Shared.LayoutResources;
 @{
     var consentFeature = this.Context.Features.Get<ITrackingConsentFeature>();
     var showBanner = !consentFeature?.CanTrack ?? false;
@@ -9,9 +9,9 @@
 @if (showBanner)
 {
     <div id="cookieConsent" class="alert alert-info alert-dismissible fade show" role="alert">
-        We use cookies to understand how you use our site and to improve your experience. <a asp-area="" asp-controller="Home" asp-action="Privacy">Learn More</a>.
+        @Resources.CookieConsent
         <button type="button" class="accept-policy close" data-dismiss="alert" aria-label="Close" data-cookie-string="@cookieString">
-            <span aria-hidden="true">Accept</span>
+            <span aria-hidden="true">@ButtonsResources.Accept</span>
         </button>
     </div>
     <script>
