--- a/AccounterApplication.Web/Views/_ViewImports.cshtml
+++ b/AccounterApplication.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AccounterApplication.Web
 @using AccounterApplication.Web.ViewModels
-@using Microsoft.AspNetCore.Mvc.Localization
+@using AccounterApplication.Common.LocalizationResources.Shared.Buttons;
+@using AccounterApplication.Common.LocalizationResources.Shared.Messages;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
