--- a/AccounterApplication.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,6 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using AccounterApplication.Web.Areas.Identity
 @using AccounterApplication.Web.Areas.Identity.Pages
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using AccounterApplication.Common.LocalizationResources.Shared.Buttons;
+@using AccounterApplication.Common.LocalizationResources.Shared.Messages;
 @using AccounterApplication.Data.Models
-@using Microsoft.AspNetCore.Mvc.Localization
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
