--- a/AccounterApplication.Web/Views/Expenses/Index.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@using AccounterApplication.Web.ViewModels.Expenses
-@using AccounterApplication.Web.Controllers
-
-@inject IViewLocalizer Localizer
+﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Web.ViewModels.Expenses
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Expenses.ExpensesViewsResources
 
 @{
-    ViewData["Title"] = Localizer["Expenses"];
+    ViewData["Title"] = Resources.Expenses;
 }
 
 @model ExpensesListingViewModel
@@ -14,17 +13,17 @@
     <link rel="stylesheet" href="~/css/dataTables.bootstrap4.min.css" type="text/css" />
 }
 
-<h1>@Localizer["Expenses"]</h1>
+<h1>@ViewData["Title"]</h1>
 
 <div class="card shadow-lg mb-lg-4">
     <div class="table-responsive">
         <table class="table table-borderless table-hover" cellspacing="0">
             <thead class="card-header py-3 thead-light text-gray-200">
                 <tr>
-                    <th scope="col">@Localizer["Date"]</th>
-                    <th scope="col">@Localizer["Amount"]</th>
-                    <th scope="col">@Localizer["Description"]</th>
-                    <th scope="col">@Localizer["Expense Group"]</th>
+                    <th scope="col">@Resources.Date</th>
+                    <th scope="col">@Resources.Amount</th>
+                    <th scope="col">@Resources.Description</th>
+                    <th scope="col">@Resources.ExpenseGroup</th>
                     <th scope="col"></th>
                 </tr>
             </thead>
@@ -41,7 +40,10 @@
                            data-id="@expense.Id"
                            data-controller="@nameof(ExpensesController).Replace(nameof(Controller), string.Empty)"
                            data-action="@nameof(ExpensesController.DeleteExpense)"
-                           data-body-message="@Localizer["You are about to delete an Expense. Click Continue to proceed."]"
+                           data-modal-title="@MessagesResources.Confirmation"
+                           data-body-message="@MessagesResources.DeleteExpenseConfirmation"
+                           data-button-delete="@ButtonsResources.Delete"
+                           data-button-cancel="@ButtonsResources.Cancel"
                            data-redirect-url="@Url.Action(nameof(ExpensesController.Index), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
                             <i class="fas fa-trash"></i>
                         </a>
