--- a/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/ChangePassword.cshtml
@@ -1,7 +1,11 @@
 ﻿@page
+
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Identity.IdentityResources;
+
 @model ChangePasswordModel
+
 @{
-    ViewData["Title"] = "Change password";
+    ViewData["Title"] = Resources.ChangePassword;
     ViewData["ActivePage"] = ManageNavPages.ChangePassword;
 }
 
@@ -26,7 +30,7 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" />
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
             </div>
-            <button type="submit" class="btn btn-primary">Update password</button>
+            <button type="submit" class="btn btn-primary">@ButtonsResources.UpdatePassword</button>
         </form>
     </div>
 </div>
