--- a/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/Email.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/Email.cshtml
@@ -1,7 +1,11 @@
 ﻿@page
+
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Identity.IdentityResources;
+
 @model EmailModel
+
 @{
-    ViewData["Title"] = "Manage Email";
+    ViewData["Title"] = Resources.ChangeEmail;
     ViewData["ActivePage"] = ManageNavPages.Email;
 }
 
@@ -25,7 +29,7 @@
                  else
                 {
                     <input asp-for="Email" class="form-control" disabled />
-                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">Send verification email</button>
+                    <button id="email-verification" type="submit" asp-page-handler="SendVerificationEmail" class="btn btn-link">@Resources.SendVerificationEmail</button>
                 }
             </div>
             <div class="form-group">
@@ -33,7 +37,7 @@
                 <input asp-for="Input.NewEmail" class="form-control" />
                 <span asp-validation-for="Input.NewEmail" class="text-danger"></span>
             </div>
-            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-primary">Change email</button>
+            <button id="change-email-button" type="submit" asp-page-handler="ChangeEmail" class="btn btn-primary">@ButtonsResources.Update</button>
         </form>
     </div>
 </div>
