--- a/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -1,7 +1,11 @@
 ﻿@page
+
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Identity.IdentityResources;
+
 @model IndexModel
+
 @{
-    ViewData["Title"] = "Profile";
+    ViewData["Title"] = Resources.Profile;
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
@@ -13,14 +17,14 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Username"></label>
-                <input asp-for="Username" class="form-control" disabled />
+                <input asp-for="Username" class="form-control" />
             </div>
             <div class="form-group">
                 <label asp-for="Input.PhoneNumber"></label>
                 <input asp-for="Input.PhoneNumber" class="form-control" />
                 <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-primary">@ButtonsResources.Update</button>
         </form>
     </div>
 </div>
