--- a/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/AccounterApplication.Web/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,11 +1,13 @@
-﻿@{
+﻿@using Resources = AccounterApplication.Common.LocalizationResources.Views.Identity.IdentityResources;
+
+@{
     Layout = "/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Manage your account</h1>
+<h1>@Resources.ManageYourAccount</h1>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>@Resources.ChangeAccountSettings</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
