--- a/AccounterApplication.Web/Views/Expenses/Index.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/Index.cshtml
@@ -20,43 +20,55 @@
         <table class="table table-borderless table-hover" cellspacing="0">
             <thead class="card-header py-3 thead-light text-gray-200">
                 <tr>
-                    <th scope="col">@Resources.Date</th>
-                    <th scope="col">@Resources.Amount</th>
-                    <th scope="col">@Resources.Description</th>
-                    <th scope="col">@Resources.ExpenseGroup</th>
+                    <th scope="col">
+                        <a href="#" class="th-sortable sort-date" data-sort-type="ascending" data-url="@Url.Action(nameof(ExpensesController.GetSortedByDate), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
+                            @Resources.Date
+                            <i class="fa fa-sort" aria-hidden="true"></i>
+                        </a>
+                    </th>
+                    <th scope="col">
+                        <a href="#" class="th-sortable sort-amount" data-sort-type="ascending" data-url="@Url.Action(nameof(ExpensesController.GetSortedByAmount), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
+                            @Resources.Amount
+                            <i class="fa fa-sort" aria-hidden="true"></i>
+                        </a>
+                    </th>
+                    <th scope="col">
+                        <a href="#" class="th-sortable sort-description" data-sort-type="ascending" data-url="@Url.Action(nameof(ExpensesController.GetSortedByDescription), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
+                            @Resources.Description
+                            <i class="fa fa-sort" aria-hidden="true"></i>
+                        </a>
+                    </th>
+                    <th scope="col">
+                        <div class="dropdown dropdown-expenseGroups">
+                            <a href="#" class="th-dropdown dropdown-toggle" id="dropdownExpenseGroups" data-toggle="dropdown" data-boundary="viewport" aria-haspopup="true" aria-expanded="false">
+                                @Resources.ExpenseGroup
+                            </a>
+                            <div class="dropdown-menu animated--fade-in" aria-labelledby="dropdownExpenseGroups" data-url="@Url.Action(nameof(ExpensesController.GetGrouped), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
+                                <a class="dropdown-item dropdown-item-toggle-group-expenses" href="#" data-id="0">All</a>
+                                <div class="dropdown-divider"></div>
+                                @foreach (var expenseGroupSelectListItem in Model.ExpenseGroupListItems)
+                                {
+                                    <a class="dropdown-item dropdown-item-toggle-group-expenses" href="#" data-id="@expenseGroupSelectListItem.Value">@expenseGroupSelectListItem.Text</a>
+                                }
+                            </div>
+                        </div>
+
+                    </th>
                     <th scope="col"></th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var expense in Model.Expenses)
-                {
-                <tr class="text-gray-800">
-                    <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.ExpenseDate</td>
-                    <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.ExpenseAmount</td>
-                    <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.Description</td>
-                    <td class="cell-clickable-edit" data-url="@Url.Action("EditExpense", "Expenses")" data-id="@expense.Id">@expense.ExpenseGroupName</td>
-                    <td>
-                        <a href="#" class="btn btn-no-shadow trigger-delete"
-                           data-id="@expense.Id"
-                           data-controller="@nameof(ExpensesController).Replace(nameof(Controller), string.Empty)"
-                           data-action="@nameof(ExpensesController.DeleteExpense)"
-                           data-modal-title="@MessagesResources.Confirmation"
-                           data-body-message="@MessagesResources.DeleteExpenseConfirmation"
-                           data-button-delete="@ButtonsResources.Delete"
-                           data-button-cancel="@ButtonsResources.Cancel"
-                           data-redirect-url="@Url.Action(nameof(ExpensesController.Index), nameof(ExpensesController).Replace(nameof(Controller), string.Empty))">
-                            <i class="fas fa-trash"></i>
-                        </a>
-                    </td>
-                </tr>
-                }
+            <tbody class="expenses-table-body">
+                <partial name="_ExpensesTableBodyPartial" />
             </tbody>
         </table>
+        <input type="hidden" name="expenseGroupSelectedValue" value="0" />
     </div>
 </div>
 
 @section Scripts
 {
+    <script src="~/js/custom/sort.js" type="text/javascript" asp-append-version="true"></script>
+    <script src="~/js/custom/group.js" type="text/javascript" asp-append-version="true"></script>
     <script src="~/js/custom/edit.js" type="text/javascript" asp-append-version="true"></script>
     <script src="~/js/custom/delete.js" type="text/javascript" asp-append-version="true"></script>
 }
