--- a/AccounterApplication.Web/Views/Incomes/Index.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/Index.cshtml
@@ -21,32 +21,23 @@
         <table class="table table-borderless table-hover" cellspacing="0">
             <thead class="card-header py-3 thead-light text-gray-200">
                 <tr>
-                    <th scope="col">@Resources.Date</th>
-                    <th scope="col">@Resources.Amount</th>
+                    <th scope="col">
+                        <a href="#" class="th-sortable sort-date-incomes" data-sort-type="ascending" data-url="@Url.Action(nameof(IncomesController.GetSortedByDate), nameof(IncomesController).Replace(nameof(Controller), string.Empty))">
+                            @Resources.Date
+                            <i class="fa fa-sort" aria-hidden="true"></i>
+                        </a>
+                    </th>
+                    <th scope="col">
+                        <a href="#" class="th-sortable sort-amount-incomes" data-sort-type="ascending" data-url="@Url.Action(nameof(IncomesController.GetSortedByAmount), nameof(IncomesController).Replace(nameof(Controller), string.Empty))">
+                            @Resources.Amount
+                            <i class="fa fa-sort" aria-hidden="true"></i>
+                        </a>
+                    </th>
                     <th scope="col"></th>
                 </tr>
             </thead>
-            <tbody>
-                @foreach (var income in Model.MonthlyIncomes)
-                {
-                    <tr class="text-gray-800">
-                        <td class="cell-clickable-edit" data-url="@Url.Action("EditMonthlyIncome", "Incomes")" data-id="@income.Id">@income.IncomePeriod</td>
-                        <td class="cell-clickable-edit" data-url="@Url.Action("EditMonthlyIncome", "Incomes")" data-id="@income.Id">@income.Amount</td>
-                        <td>
-                            <a href="#" class="btn btn-no-shadow trigger-delete"
-                               data-id="@income.Id"
-                               data-controller="@nameof(IncomesController).Replace(nameof(Controller), string.Empty)"
-                               data-action="@nameof(IncomesController.DeleteMonthlyIncome)"
-                               data-modal-title="@MessagesResources.Confirmation"
-                               data-body-message="@MessagesResources.DeleteIncomeConfirmation"
-                               data-button-delete="@ButtonsResources.Delete"
-                               data-button-cancel="@ButtonsResources.Cancel"
-                               data-redirect-url="@Url.Action(nameof(IncomesController.Index), nameof(IncomesController).Replace(nameof(Controller), string.Empty))">
-                                <i class="fas fa-trash"></i>
-                            </a>
-                        </td>
-                    </tr>
-                }
+            <tbody class="incomes-table-body">
+               <partial name="_MonthlyIncomesTableBodyPartial" />
             </tbody>
         </table>
     </div>
@@ -54,6 +45,7 @@
 
 @section Scripts
 {
+    <script src="~/js/custom/sort.js" type="text/javascript" asp-append-version="true"></script>
     <script src="~/js/custom/edit.js" type="text/javascript" asp-append-version="true"></script>
     <script src="~/js/custom/delete.js" type="text/javascript" asp-append-version="true"></script>
 }
