--- a/AccounterApplication.Web/Views/Incomes/Index.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/Index.cshtml
@@ -45,7 +45,5 @@
 
 @section Scripts
 {
-    <script src="~/js/custom/sort.js" type="text/javascript" asp-append-version="true"></script>
-    <script src="~/js/custom/edit.js" type="text/javascript" asp-append-version="true"></script>
-    <script src="~/js/custom/delete.js" type="text/javascript" asp-append-version="true"></script>
+    <script src="~/js/table-functions.js" type="text/javascript" asp-append-version="true"></script>
 }
