--- a/AccounterApplication.Web/Views/Shared/_Layout.cshtml
+++ b/AccounterApplication.Web/Views/Shared/_Layout.cshtml
@@ -95,6 +95,15 @@
                 </div>
             </li>
 
+            <li class="nav-item">
+                <a class="nav-link"
+                   asp-controller="@(nameof(ComponentsController).Replace(nameof(Controller), string.Empty))"
+                   asp-action="@(nameof(ComponentsController.Index))">
+                    <i class="fa fa-credit-card" aria-hidden="true"></i>
+                    <span>@Resources.Funds</span>
+                </a>
+            </li>
+
             <hr class="sidebar-divider">
 
             <div class="text-center d-none d-md-inline">
