--- a/AccounterApplication.Web/Views/Components/Index.cshtml
+++ b/AccounterApplication.Web/Views/Components/Index.cshtml
@@ -1,48 +1,93 @@
-﻿@using AccounterApplication.Web.ViewModels.Components
+﻿@using AccounterApplication.Web.Controllers
+@using AccounterApplication.Common.Enumerations;
+@using AccounterApplication.Web.ViewModels.Components
+
+@using Resources = AccounterApplication.Common.LocalizationResources.Views.Components.ComponentsViewsResources;
 
 @model ComponentsListingViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = Resources.Funds;
 }
 
-<h1>@ViewData["Title"]</h1>
-
-<div class="card shadow-lg mb-lg-4">
-    <div class="table-responsive">
-        <table class="table table-borderless table-hover" cellspacing="0">
-            <thead class="card-header py-3 thead-light text-gray-200">
-                <tr>
-                    <th scope="col">
-                      Name
-                    </th>
-                    <th scope="col">
-                        Amount
-                    </th>
-                    <th scope="col">
-                        Type
-                    </th>
-                    <th scope="col">
-                        Currency
-                    </th>
-                    <th scope="col">
-                        Active
-                    </th>
-                </tr>
-            </thead>
-            <tbody class="expenses-table-body">
-                @foreach (var component in Model.Components)
-                {
-                <tr class="text-gray-800">
-                    <td class="cell-clickable-edit">@component.Name</td>
-                    <td class="cell-clickable-edit">@component.Amount</td>
-                    <td class="cell-clickable-edit">@component.ComponentTypeName</td>
-                    <td class="cell-clickable-edit">@component.CurrencyCode</td>
-                    <td class="cell-clickable-edit">@component.IsActive</td>
-                </tr>
-                }
-            </tbody>
-        </table>
+<div class="row mb-5">
+    <div class="col">
+        <h1>@ViewData["Title"]</h1>
+    </div>
+    <div class="col">
+        <div class="float-right">
+            <a class="btn btn-secondary btn-icon-split"
+               asp-controller="@(nameof(ComponentsController).Replace(nameof(Controller), string.Empty))"
+               asp-action="@(nameof(ComponentsController.CreateComponent))">
+                <span class="icon text-white-50">
+                    <i class="fas fa-arrow-right"></i>
+                </span>
+                <span class="text">@ButtonsResources.CreateFund</span>
+            </a>
+        </div>
     </div>
 </div>
 
+@foreach (var component in Model.Components)
+{
+    <div class="row">
+        <div class="col-xl-12 col-md-6 mb-2">
+            <div class="card border-left-primary shadow h-100 py-2">
+                <div class="card-body">
+                    <div class="row no-gutters align-items-center">
+                        <div class="col mr-md-4">
+                            <div class="text-lg font-weight-bold text-primary text-uppercase mb-1">@component.Name - @component.CurrencyCode</div>
+                            <div class="h5 mb-0 font-weight-bold amount-primary">@component.CurrencySign @component.Amount</div>
+                            <div class="h6 mb-0 text-gray-700">@Resources.Available</div>
+                        </div>
+                        @if (component.ComponentTypeId.Equals((int)ComponentTypes.SavingsComponent))
+                        {
+                            <div class="col-auto">
+                                <a href="#" class="btn btn-no-shadow hov-green trigger-save-withdraw"
+                                   data-id="@component.Id"
+                                   data-controller="@nameof(ComponentsController).Replace(nameof(Controller), string.Empty)"
+                                   data-action="@nameof(ComponentsController)"
+                                   data-modal-title="@MessagesResources.Confirmation"
+                                   data-body-message="@MessagesResources.DeleteExpenseConfirmation"
+                                   data-button-delete="@ButtonsResources.Delete"
+                                   data-button-cancel="@ButtonsResources.Cancel"
+                                   data-redirect-url="@Url.Action(nameof(ComponentsController.Index), nameof(ComponentsController).Replace(nameof(Controller), string.Empty))">
+                                    <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                    <div class="h6 mb-0 text-gray-700 hov-green">@Resources.SaveOrWithdraw</div>
+                                </a>
+                            </div>
+                        }
+                        <div class="col-auto">
+                            <a href="#" class="btn btn-no-shadow hov-green trigger-save-withdraw"
+                               data-id="@component.Id"
+                               data-controller="@nameof(ComponentsController).Replace(nameof(Controller), string.Empty)"
+                               data-action="@nameof(ComponentsController)"
+                               data-modal-title="@MessagesResources.Confirmation"
+                               data-body-message="@MessagesResources.DeleteExpenseConfirmation"
+                               data-button-delete="@ButtonsResources.Delete"
+                               data-button-cancel="@ButtonsResources.Cancel"
+                               data-redirect-url="@Url.Action(nameof(ComponentsController.Index), nameof(ComponentsController).Replace(nameof(Controller), string.Empty))">
+                                <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                <div class="h6 mb-0 text-gray-700 hov-yellow">@Resources.EditComponent</div>
+                            </a>
+                        </div>
+                        <div class="col-auto float-right">
+                            <a href="#" class="btn btn-no-shadow trigger-delete"
+                               data-id="@component.Id"
+                               data-controller="@nameof(ComponentsController).Replace(nameof(Controller), string.Empty)"
+                               data-action="@nameof(ComponentsController)"
+                               data-modal-title="@MessagesResources.Confirmation"
+                               data-body-message="@MessagesResources.DeleteExpenseConfirmation"
+                               data-button-delete="@ButtonsResources.Delete"
+                               data-button-cancel="@ButtonsResources.Cancel"
+                               data-redirect-url="@Url.Action(nameof(ComponentsController.Index), nameof(ComponentsController).Replace(nameof(Controller), string.Empty))">
+                                <i class="fas fa-trash fa-2x text-gray-300"></i>
+                                <div class="h6 mb-0 text-gray-700 hov-red">@Resources.DeleteComponent</div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+}
