--- a/AccounterApplication.Web/Views/Expenses/Index.cshtml
+++ b/AccounterApplication.Web/Views/Expenses/Index.cshtml
@@ -9,7 +9,11 @@
 @model ExpensesListingViewModel
 
 
-<h1>@ViewData["Title"]</h1>
+<div class="row mb-5">
+    <div class="col">
+        <h1>@ViewData["Title"]</h1>
+    </div>
+</div>
 
 <div class="card shadow-lg mb-lg-4">
     <div class="table-responsive">
