--- a/AccounterApplication.Web/Views/Incomes/Index.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/Index.cshtml
@@ -14,7 +14,11 @@
 }
 
 
-<h1>@ViewData["Title"]</h1>
+<div class="row mb-5">
+    <div class="col">
+        <h1>@ViewData["Title"]</h1>
+    </div>
+</div>
 
 <div class="card shadow-lg mb-lg-4">
     <div class="table-responsive">
