--- a/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
+++ b/AccounterApplication.Web/Views/Incomes/AddMonthlyIncome.cshtml
@@ -8,7 +8,11 @@
     ViewData["Title"] = Resources.AddMonthlyIncome;
 }
 
-<h1>@ViewData["Title"]</h1>
+<div class="row mb-5">
+    <div class="col">
+        <h1>@ViewData["Title"]</h1>
+    </div>
+</div>
 
 <div class="col-md-6">
     <form asp-controller="@nameof(IncomesController).Replace(nameof(Controller), string.Empty)" asp-action="@(nameof(IncomesController.AddMonthlyIncome))" class="form" method="post">
