--- a/AccounterApplication.Web/Views/UserDashboard/Index.cshtml
+++ b/AccounterApplication.Web/Views/UserDashboard/Index.cshtml
@@ -3,5 +3,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<div class="row mb-5">
+    <div class="col">
+        <h1>@ViewData["Title"]</h1>
+    </div>
+</div>
 
